[gd_scene load_steps=5 format=3 uid="uid://dxhdj8hsb5ra8"]

[ext_resource type="Script" uid="uid://bs61mhggvuvip" path="res://Scripts/RegisterMenu.gd" id="1_8447u"]
[ext_resource type="FontFile" uid="uid://b6ixxpdy5in1g" path="res://Fonts/Schoolbell-Regular.ttf" id="2_kuwup"]

[sub_resource type="LabelSettings" id="LabelSettings_kuwup"]
font = ExtResource("2_kuwup")
font_size = 50
font_color = Color(0, 0.512857, 0.854458, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(6, 6)

[sub_resource type="LabelSettings" id="LabelSettings_8447u"]
font = ExtResource("2_kuwup")
font_size = 60
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="RegisterMenu" type="Node2D"]
script = ExtResource("1_8447u")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 416.0
offset_top = 108.0
offset_right = 784.0
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="RegisterLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kuwup")
theme_override_font_sizes/font_size = 70
text = "Register to play"
label_settings = SubResource("LabelSettings_kuwup")
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
max_length = 40
caret_blink = true

[node name="PasswordInput" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
caret_blink = true
secret = true

[node name="RegisterButton" type="MenuButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_kuwup")
theme_override_font_sizes/font_size = 40
text = "Sign up!"

[node name="ErrorMessage" type="Label" parent="."]
offset_left = 190.0
offset_top = 232.0
offset_right = 778.0
offset_bottom = 405.0
rotation = -0.335037
text = "Error: something_wrong"
label_settings = SubResource("LabelSettings_8447u")

[connection signal="button_up" from="PanelContainer/VBoxContainer/RegisterButton" to="." method="_on_register_button_button_up"]
